k8s-configs/helloworld-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld-http
  name: helloworld-http
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: helloworld-http
  type: NodePort
