k8s-configs/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-http
          servicePort: 80
